登録機能途中

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "pages/resas.jsx"  ],
+, "pages/resas.jsx", "pages/index.jsx"  ],
   "exclude": [
     "node_modules"
   ]
