--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.9.0",
     "chart.js": "^3.7.1",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
